--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="SMARTIE is a collaborative initiative designed to enhance the integration, development, 
+      and responsible use of Artificial Intelligence (AI) within European higher education institutions. 
+      By fostering innovation and strategic AI deployment, SMARTIE aims to equip universities, educators, 
+      and students with the tools, knowledge, and infrastructure necessary to thrive in an increasingly AI-driven world."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Smartie</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
